--- a/O4/Latex/Materiale_Michelson.tex
+++ b/O4/Latex/Materiale_Michelson.tex
@@ -6,7 +6,7 @@ Lo scopo in questa prima parte della relazione è quello di ricavare il valore d
 
 Il materiale a nostra disposizione è il seguente:
 \begin{itemize}
-	\item{Interferometro di Michelson premontato e prealineato;}
+	\item{Interferometro di Michelson premontato e preallineato;}
     \item{Camera da vuoto e pompa a membrana per la misura dell'indice di rifrazione dell'aria;}
     \item{Vetro di cui misurare l'indice di rifrazione;}
 	\item{Valvola a spillo per la regolazione del flusso di aria in uscita dalla camera;}
