--- a/O4/Latex/Procedimento_Diffrazione.tex
+++ b/O4/Latex/Procedimento_Diffrazione.tex
@@ -12,8 +12,8 @@ L'esecuzione dell'esperienza è molto semplice. Avevamo a nostra disposizione le
 Le misure sono state eseguite nel seguente modo. Per ogni diapositiva, abbiamo posto sul percorso del raggio laser ogniuno degli ostacoli
 presenti sulla diapositiva, uno alla volta (ovviamente :-) ). Nel fare ciò, ci siamo presi la briga di controllare, alzando ed abbassando
 la diapositiva, che la figura di diffrazione fosse la più pulita possibile. Questo significa trovare il luogo della fessura che ha i bordi
-migliori. Dopodiché abbiamo incollato allo schermo una striscia di carta per annotare picchi e minimi. Siccome la figura cambia a seconda
-dell'ostacolo è stato fatto come segue:
+migliori. Dopodiché abbiamo incollato allo schermo una striscia di carta per annotare picchi di luce ed ombra.
+Siccome la figura cambia a seconda dell'ostacolo abbiamo variato la procedura di misura come segue:
 
 \begin{itemize}
     \item{Nel caso di fili e fessure la figura di diffrazione è lineare e presenta dei massimi e minimi larghi e ``sfuocati'' con un andamento
@@ -34,24 +34,32 @@ dell'ostacolo è stato fatto come segue:
     \centering
     \begin{subfigure}[b]{0.3\textwidth}
         \includegraphics[width=\textwidth]{f1.png}
-        \caption{Filo o una fessura.}
+        \caption{Filo o fessura}
         \label{fig:ff}
     \end{subfigure}%
     ~ %add desired spacing between images, e. g. ~, \quad, \qquad etc.
       %(or a blank line to force the subfigure onto a new line)
     \begin{subfigure}[b]{0.3\textwidth}
         \includegraphics[width=\textwidth]{f2.png}
-        \caption{Foro.}
+        \caption{Foro}
         \label{fig:foro}
     \end{subfigure}
     ~ %add desired spacing between images, e. g. ~, \quad, \qquad etc.
       %(or a blank line to force the subfigure onto a new line)
     \begin{subfigure}[b]{0.3\textwidth}
         \includegraphics[width=\textwidth]{f3.png}
-        \caption{Reticolo.}
+        \caption{Reticolo}
         \label{fig:ret}
     \end{subfigure}
     \caption{Figure di diffrazione generate da diversi tipi di ostacoli. Notare che le aree nere sono quelle illuminate,
     mentre quelle bianche sono quelle che restano al buio.}
     \label{fig:diff}
 \end{figure}
+
+\subsection{Analisi dati}
+Poiché la procedura di misura da noi usata varia a seconda dell'oggetto osservato (fessure e fili, fori, reticoli) anche l'analisi dati cambia di conseguenza.
+
+\paragraph{fili}
+\paragraph{fessure}
+\paragraph{fori circolari}
+\paragraph{reticoli di diffrazione}
