--- a/O4/Latex/Procedimento_Michelson.tex
+++ b/O4/Latex/Procedimento_Michelson.tex
@@ -1,6 +1,6 @@
 \subsection{Esecuzione dell'esperienza}
 
-La prima operazione fatta è stata quella di verificare il corretto allineamento dell'interferometro. Abbiamo infatti notato che se i due specchi non sono perpendicolari tra loro, sullo schermo si vedono figure di interferenza complicate e difficili da trattare invece che una semplice figura di interferenza lineare in cui si alternano massimi e minimi. Per allineare lo strumento è sufficiente ruotare delicatamente i due specchi finche non compare sullo schermo una figura d'interferenza semplice.
+La prima operazione fatta è stata quella di verificare il corretto allineamento dell'interferometro. Abbiamo infatti notato che se i due specchi non sono perpendicolari tra loro, sullo schermo si vedono figure di interferenza complicate e difficili da trattare invece che una semplice figura di interferenza lineare in cui si alternano massimi e minimi. Per allineare lo strumento è sufficiente ruotare delicatamente i due specchi finché non compare sullo schermo una figura d'interferenza semplice.
 
 %Facciamo notare che nonostante l'attenzione prestata, lo specchio e lo schermo non sono risultati essere perfettamente paralleli tra di loro. Questo comporta che i due raggi luminosi incidenti sullo schermo non sono allineati tra di loro. Infatti sullo schermo si visualizzano in alternanza delle frange di interferenza costruttiva e distruttiva, ovvero picchi luminosi e non che si alternano con regolarità.
 % WTF????
@@ -8,8 +8,8 @@ La prima operazione fatta è stata quella di verificare il corretto allineamento
 La misura dell'indice di rifrazione di un dato materiale con l'interferometro di Michelson si esegue adottando la seguente strategia.
 Si parte da una configurazione base, per esempio l'interferometro con un ramo su cui e già stata montata la camera da vuoto
 (si veda la Figura \ref{fig:mik}). A questo punto sullo schermo è proiettata una figura di interferenza. Dopodiché si
-varia gradualmente un qualche parametro del materiale sotto esame, per esempio: la pressione (nel caso dell'aria), la lunghezza,
-l'inclinazione oppure la concentrazione (per una soluzione). Questo serve per variare il cammino ottico del raggio che attraversa il materiale.
+varia gradualmente un qualche parametro del materiale sotto esame, per esempio la pressione (nel caso dell'aria), la lunghezza o l'inclinazione (per il vetro) oppure la concentrazione (per una soluzione). % beh, la soluzione è dell'esperimento successivo...
+Questo serve per variare il cammino ottico del raggio che attraversa il materiale.
 In questo modo la figura di interferenza varia e le frange si muovono.
 
 %La seguente relazione lega il numero $N$ di frange passate sullo schermo, alla differenza di cammino ottico $d$.
@@ -32,33 +32,36 @@ In questo modo la figura di interferenza varia e le frange si muovono.
 
 \subsubsection{Indice di rifrazione dell'aria}
 
-Detto questo la procedura eseguita per ricavare l'indice di rifrazione dell'aria è la seguente:
+La procedura eseguita per ricavare l'indice di rifrazione dell'aria è la seguente:
 
 \begin{itemize}
-	\item{Abbiamo installato sul sistema, tra il beam splitter e lo specchio mobile, una piccola camera da vuoto con due pareti in vetro atte a far passare la luce. La camera è stata collegata, mediante la valvola a spillo alla pompa a membrana;}
-    \item{Partendo con la camera da vuoto a pressione atmosferica abbiamo man mano creato il vuoto all'interno della camera regolando l'apertura della valvola a spillo. Aprendo la valvola a spillo (ovviamente con la pompa accesa), l'aria esce dalla camera da vuoto e viene pompata fuori;}
+	\item{Abbiamo installato sul sistema, tra il beam splitter e lo specchio mobile, una piccola camera da vuoto con due pareti in vetro atte a far passare la luce % diggiuro!
+	 e la camera è stata collegata, mediante la valvola a spillo, alla pompa a membrana;}
+    \item{Partendo con la camera da vuoto a pressione atmosferica abbiamo man mano creato il vuoto all'interno della camera regolando l'apertura della valvola a spillo. Aprendo la valvola a spillo (ovviamente con la pompa accesa), l'aria esce dalla camera da vuoto ed esce in atmosfera;}
     \item{Ad intervalli regolari di pressione, ovvero ogni \SI{10}{\kilo\pascal}, abbiamo annotato il numero di frange di interferenza passate sullo schermo;}
 \end{itemize}
 
 \subsubsection{Indice di rifrazione del vetro}
 
-Per misurare l'indice di rifrazione del vetro abbiamo adottato una strategia simile. Dobbiamo partire da una data figura di interferenza e variare il cammino ottico di uno dei due raggi. Poi dobbiamo contare il numero di massimi di intensità (ovvero delle frange).
+Per misurare l'indice di rifrazione del vetro abbiamo adottato una strategia simile. Dobbiamo partire da una data figura di interferenza e variare il cammino ottico di uno dei due raggi, contando il numero di massimi di intensità, ovvero il numero delle frange.
 
-Infatti ponendo un vetro tra il beam splitter e lo specchio fisso si ottiene un effetto analogo a guello del caso precedete. Ovvero il raggio luminoso rifratto è costretto ad attraversare il vetro sia in andata che al ritorno e quindi subirà un variazione del suo cammino ottico.
-Quindi la prima operazione neccessaria è quella di capire dove si trova lo zero di questo allineamento, ovvero quando i due raggi compiono lo stesso cammino ottico. Pertanto dopo aver posizionato il vetro, cercando di allinearlo con lo specchio fisso, si agisce sullo specchio mobile alontanandolo o avvicinandolo al beam spltter. Si fa questo al fine di ottenere una semplice figura di interferenza, che come nel caso precedete e una frangia luminosa.
-A questo punto si segna l'angolo zero, che nel nostro caso ha il seguente vlore:
+Ponendo un vetro tra il beam splitter e lo specchio fisso si ottiene un effetto analogo a guello del caso precedete. Infatti il raggio luminoso rifratto è costretto ad attraversare il vetro sia in ``andata'' che al ``ritorno'' e quindi subirà una variazione del suo cammino ottico.
+
+La prima operazione neccessaria è quella di capire dove si trova lo zero di questo allineamento, ovvero quando i due raggi compiono lo stesso cammino ottico. Pertanto, dopo aver posizionato il vetro, si agisce sullo specchio mobile allontanandolo o avvicinandolo al beam spltte per allinearlo con lo specchio fisso. Si fa questo al fine di ottenere una semplice figura di interferenza, che come nel caso precedente è una frangia luminosa.
+
+A questo punto si segna l'angolo di allineamento, che nel nostro caso ha il seguente valore:
 
 \begin{equation}
-	\theta_0 \,=\, 2.2 \pm xxx (nonmeloricordo)
+	\theta_0 \,=\, 2.2 \pm 0.1
 \end{equation}
 %
-e successvamente ruotando lo specchio ad ampiezze sempre maggiori si varia il cammino ottico del raggio luminoso rifratto. In tal modo si varia, non linarmente, il numero di frange che scorrono sullo schermo.
+Ruotando lo specchio ad ampiezze sempre maggiori si varia il cammino ottico del raggio luminoso rifratto. In tal modo scorre sullo schermo un certo numero di frange, il quale varia non linarmente con l'aumentare dei gradi.
 
 \subsection{Analisi Dati}
 
-\subsubsection{Indice di rifrazione dell'aria: quadro teorico}
+\subsubsection{Indice di rifrazione dell'aria} %: quadro teorico}
 
-Per ricavare l'indice di rifrazione dell'aria abbiamo sfruttato la legge fisica che ci dice che:
+Per ricavare l'indice di rifrazione dell'aria abbiamo sfruttato la seguente legge:
 
 \begin{equation}
 	N \,=\, \frac{d}{\lambda}
@@ -67,8 +70,10 @@ Per ricavare l'indice di rifrazione dell'aria abbiamo sfruttato la legge fisica 
 dove con $N$  si indica il numero di frange (massimi di intensità) contati, $d$ il cammino ottico e $\lambda$ la lunghezza d'onda del laser.
 
 Ricordiamo che a condizione di pressione costante il cammino ottico percorso dai due raggi luminosi risulta essere lo stesso.
-Quindi lo scopo sarà quello di confrontare il numero di frange contate con la differenza di pressione rilevata. Infatti variando la pressione nella camera da vuoto si varia l'indice di rifrazione dell'aria. Questo provoca una variazione nel cammino ottico del raggio riflesso dallo specchio semitrasparente e quindi fenomeni di diffrazione. Tali fenomeni saranno sempre più accentuati man mano che l'indice di rifrazione dell'aria varia infunzione della pressione interna alla camera.
-Sapendo che il cammino ottico ($D$) è pari a due volte la lunghezza della camera da vuoto moltiplicata per lindice di rifrazione del gas ivi contenuto possiamo ottenere la seguente relazione:
+Quindi lo scopo sarà quello di confrontare il numero di frange contate con la differenza di pressione rilevata. Infatti variando la pressione nella camera da vuoto si varia l'indice di rifrazione dell'aria.
+Questo provoca una variazione nel cammino ottico del raggio riflesso dallo specchio semitrasparente e quindi fenomeni di diffrazione.
+Tali fenomeni saranno sempre più accentuati man mano che l'indice di rifrazione dell'aria varia in funzione della pressione interna alla camera.
+Sapendo che il cammino ottico ($D$) è pari a due volte la lunghezza della camera da vuoto moltiplicata per l'indice di rifrazione del gas ivi contenuto, possiamo ottenere la seguente relazione:
 
 \begin{equation}
 	\Delta{n} \,=\, \frac{N \, \lambda}{D} \qquad \text{con} \qquad \Delta{n} \,=\, (n\ped{p} \,-\, n\ped{vuoto})
@@ -84,7 +89,8 @@ Quindi per ottenere il valore dell'idice di rifrazione dell'aria alla pressione 
 	\label{eq:indice_rif_aria}
 \end{equation}
 %
-e quindi grazie all'interpolazione che verrà effettuata sul grafico mostrante il numero di frange contate ($N$) in funzione della pressione raggionta ($P$) possiamo ricavere il numero di massimi ($N\ped{atm}$) relativi alla pressione atmosferica ($P\ped{atm}$). Infine sfruttando la precedente relazione (\ref{eq:indice_rif_aria}) siamo in grado di ottenere il valore dell'indice di rifrazione dell'aria a pressione atmosferica:
+e quindi grazie all'interpolazione dei dati del numero di frange contate ($N$) in funzione della pressione raggiunta ($P$) possiamo ricavere il numero di massimi ($N\ped{atm}$) relativi alla pressione atmosferica ($P\ped{atm}$).
+Infine sfruttando la precedente relazione (\ref{eq:indice_rif_aria}) siamo in grado di ottenere il valore dell'indice di rifrazione dell'aria a pressione atmosferica:
 
 \begin{equation}
 	n\ped{patm} \,=\, 1 \,+\, \frac{N\ped{atm} \, \lambda}{D}
@@ -92,8 +98,53 @@ e quindi grazie all'interpolazione che verrà effettuata sul grafico mostrante i
 \end{equation}
 %
 
-Quindi ora avendo il quadro teorico che stà alla base dell'esperimento possiamo procedere con l'analizzare i dati che abbiamo ottenuto.
+%Quindi ora avendo il quadro teorico che sta alla base dell'esperimento possiamo procedere con l'analizzare i dati che abbiamo ottenuto.
+Il valore da noi ricavato per l'indice di rifrazione è:
 
-\subsubsection{Valore indice di rifrazione dell'aria}
+\begin{equation}
+	n\ped{atm} \, = \, 1.00020 \pm 0.00001
+\end{equation}
+%
+ricordiamo che l'indice di rifrazione dell'aria a pressione atmosferica e a temperatura di 20 $\si{\degreeCelsius}$ è:
+\begin{equation}
+n\ped{atm} \, = \, 1.000 292 6
+\end{equation}
+%\footnote{Il valore è stato preso da  it.wikipedia.org/wiki/Indice_di_rifrazione}
+
+%\subsubsection{Valore indice di rifrazione dell'aria}
+
+\begin{figure}[t]
+    \centering
+%		[b]{0.3\textwidth}
+        \includegraphics[width=\textwidth]{graph.pdf}
+        \caption{Indice di rifrazione dell'aria in funzione della pressione.}
+        \label{fig:enne_press}
+\end{figure}
 
 \subsubsection{Indice di rifrazione del vetro}
+
+
+Lo schema in Figura \ref{fig:mik} rappresenta ancora il tavolo di lavoro ad eccezione che al posto della camera da vuoto abbiamo posizionato un vetro dello spessore di circa 6 \si{\milli\metre} su uno specifico supporto girevole.
+
+Per ricavare l'indice di rifrazione del vetro abbiamo usato un procedimento del tutto simile a quello descritto nel paragrafo precedente.
+Se però per l'aria variavamo la sua pressione tramite una pompa ed una valvola a spillo, ora ruotiamo il vetro in modo tale che il raggio di luce compia un tragitto maggiore nel vetro. % fa un po' schifo sta frase...
+
+Grazie a calcoli di ottica geometrica si riesce \emph{banalmente} a dedurre l'equazione che lega l'indice di rifrazione del vetro all'angolo (e quindi alla differenza di cammino ottico e alle frange contate) è:
+\begin{equation}
+	n\ped{vetro} \, = \, \frac{(2t - N \lambda) (1 - cos(\theta))}{2t(1-cos(\theta))-N\lambda}
+\end{equation}
+dove $t$ è la lunghezza del vetro, $\lambda$ è la lunghezza d'onda, $\theta$ è la rotazione del vetro rispetto al fascio di luce %(\theta = 0 equivale al raggio perpendicolare al vetro)
+e $N$ è il numero di frange contate tra $\theta_0$ e la successiva posizione.
+I valori costanti nel nostro caso sono $t \,=\, 5.75 \pm 0.\textbf{xx} \, mm$ e $\lambda \, = \, 543.5 \, \si{\nano\metre}$
+
+I nostri dati hanno portato, tramite la media pesata dei dati ricavati ad ogni $\theta$, ad ottenere il seguente valore:
+\begin{equation}
+	n\ped{vetro} \, = \, 1.59 \pm 0.01
+\end{equation}
+
+\begin{figure}[t]
+    \centering
+        \includegraphics[width=\textwidth]{lol.pdf}
+        \caption{Indice di rifrazione del vetro in funzione dell'angolo.}
+        \label{fig:enne_theta}
+\end{figure}
