--- a/O4/Latex/Materiale_Diffrazione.tex
+++ b/O4/Latex/Materiale_Diffrazione.tex
@@ -10,5 +10,5 @@ utilizzando i reticoli a nostra disposizione.
     \item{Laser di diverse lunghezze d'onda: $\lambda_1 = \SI{632.0}{\nano\metre}$ (rosso) e $\lambda_2 = \SI{612}{\nano\metre}$ (arancione);}
     \item{Sistema di slitte per posizionare i laser e le diapositive conteneti gli ostacoli da misurare;}
     \item{Schermo su cui proiettare la figura di diffrazione;}
-    \item{Carta, penna e metro per misurare la misura di diffrazione;}
+    \item{Carta, penna e metro e calibro per misurare la misura di diffrazione;}
 \end{itemize}
