--- a/O4/Latex/Procedimento_Diffrazione.tex
+++ b/O4/Latex/Procedimento_Diffrazione.tex
@@ -12,8 +12,8 @@ L'esecuzione dell'esperienza è molto semplice. Avevamo a nostra disposizione le
 Le misure sono state eseguite nel seguente modo. Per ogni diapositiva, abbiamo posto sul percorso del raggio laser ogniuno degli ostacoli
 presenti sulla diapositiva, uno alla volta (ovviamente :-) ). Nel fare ciò, ci siamo presi la briga di controllare, alzando ed abbassando
 la diapositiva, che la figura di diffrazione fosse la più pulita possibile. Questo significa trovare il luogo della fessura che ha i bordi
-migliori. Dopodiché abbiamo incollato allo schermo una striscia di carta per annotare picchi e minimi. Siccome la figura cambia a seconda
-dell'ostacolo è stato fatto come segue:
+migliori. Dopodiché abbiamo incollato allo schermo una striscia di carta per annotare picchi e minimi e li abbiamo misurato la distanza tra
+le tacche con il calibro. Siccome la figura cambia a seconda dell'ostacolo è stato fatto come segue:
 
 \begin{itemize}
     \item{Nel caso di fili e fessure la figura di diffrazione è lineare e presenta dei massimi e minimi larghi e ``sfuocati'' con un andamento
@@ -26,8 +26,7 @@ dell'ostacolo è stato fatto come segue:
         l'inizio e la fine del minimo e poi mediato i valori ottenuti.}
     \item{Nel caso dei reticoli di diffrazione la figura di interferenza presenta dei picchi molto luminosi e dei minimi molto larghi
             (In realtà ci sono anche dei minimi secondari, ma sono talmente deboli da non essere percepibili. Disegno in Figura \ref{fig:ret}).
-            La misura dei minimi è quindi
-        esclusa, per cui abbiamo misurato la separazione tra i massimi dello stesso ordine.}
+            La misura dei minimi è quindi esclusa, per cui abbiamo misurato la separazione tra i massimi dello stesso ordine.}
 \end{itemize}
 
 \begin{figure}[t]
@@ -51,7 +50,109 @@ dell'ostacolo è stato fatto come segue:
         \caption{Reticolo.}
         \label{fig:ret}
     \end{subfigure}
-    \caption{Figure di diffrazione generate da diversi tipi di ostacoli. Notare che le aree nere sono quelle illuminate,
-    mentre quelle bianche sono quelle che restano al buio.}
+    \caption{Figure di diffrazione generate da diversi tipi di ostacoli. Notare che, in maniera contro intuitiva,
+        le aree nere sono quelle illuminate, mentre quelle bianche sono quelle che restano al buio.}
     \label{fig:diff}
 \end{figure}
+
+Nelle
+
+\begin{SCtable}[0.8][p]
+    \centering
+    \footnotesize
+    \begin{tabular}{l l l l l}
+        \toprule
+        160 um [mm]&    80 um [mm]&        40 um [mm]&     20 um [mm]\\
+        \midrule
+        12.65&       24.80&                        48.40&          103.30\\
+        25.50&       49.25&                        97.10&          209.80\\
+        37.75&       73.70&                        146.75&         313.00\\
+        50.10&       98.90&                        195.00&\\
+        62.55&      124.10&                       246.05&\\
+        74.85&      148.40&&\\                       
+        88.25&          &&\\
+        100.15&&&\\
+        113.10&&&\\
+        125.70&&&\\
+        \bottomrule
+    \end{tabular}
+    \caption{Distanza misurata tra i minimi dello stesso ordine nel caso della diapositiva con le fessure.
+        Il titolo delle colonne si riferisce alla larghezza nominale delle fessure.}
+    \label{tab:fessure}
+\end{SCtable}
+
+\begin{SCtable}[0.8][p]
+    \centering
+    \footnotesize
+    \begin{tabular}{l l l l l l}
+        \toprule
+        filo 1 [mm]&         filo 2 [mm]&         filo 3 [mm]&         filo 4 [mm]&         filo 5 [mm]&         Capello[mm]\\
+        \midrule
+        34.50&          21.35&          17.50&          10.65&          3.05&           28.55\\
+        70.70&          42.15&          34.20&          21.15&          8.30&           56.00\\
+        104.60&         62.45&          51.40&          30.30&          14.00&          84.15\\
+        149.20&         82.45&          67.90&          40.70&          21.10&          112.40\\
+        174.95&         104.15&         85.30&          50.75&          28.00&          139.15\\
+        &              124.30&         101.90&         60.85&          34.40&          \\
+        &              144.90&         118.30&         71.00&          41.60&          \\
+        &              &              135.65&         81.00&          48.25&          \\
+        &              &              &              &              54.55&          \\
+        \bottomrule
+    \end{tabular}
+    \caption{Distanza misurata tra i }
+    \label{tab:fili}
+\end{SCtable}
+
+\begin{table}
+    \centering
+    \footnotesize
+	\begin{tabular}{ l | l l l l l l l l l l }
+		\toprule
+		160 um [mm]    & 12.65  & 25.50  & 37.75  & 50.10  & 62.55  & 74.85  & 88.25 & 100.15 & 113.10 & 125.70 \\
+		80 um [mm]     & 25.30  & 49.50  & 74.10  & 98.80  & 123.60 & 148.50 &       &        &        &        \\
+		80 um bis [mm] & 24.30  & 49.00  & 73.35  & 99.00  & 124.55 & 148.25 &       &        &        &        \\
+		40 um [mm]     & 48.40  & 97.10  & 146.75 & 195.00 & 246.05 &        &       &        &        &        \\
+		20 um [mm]     & 103.30 & 209.80 & 313.00 &        &        &        &       &        &        &        \\
+		\bottomrule
+	\end{tabular}
+	\caption{}
+	\label{tab:}
+\end{table}
+
+
+\begin{SCtable}[0.8][p]
+    \centering
+    \footnotesize
+    \begin{tabular}{l l l l}
+        \toprule
+        buco 40 um (interno) [mm]&      buco 40 um (esterno) [mm]&      buco 80 um (interno) [mm]&      buco 80 um (esterno) [mm]\\
+        \midrule
+        58&                             69&                             30.5&                           35\\
+        58&                             72&                             28&                             32.5\\
+        58&                             70&                             28&                             31\\
+        57&                             70&                             27&                             33\\
+        \bottomrule
+    \end{tabular}
+    \caption{}
+    \label{tab:foro}
+\end{SCtable}
+
+\begin{SCtable}[0.8][p]
+    \centering
+    \footnotesize
+    \begin{tabular}{l l l l l l l}
+        \toprule
+        red 100 [mm]&   red 300 [mm]&   red 600 [mm]&   orange 100 [mm]&    orange 300 [mm]&    orange 600 [mm]&\\
+        \midrule
+        198&            597&            1282&           191&                576&                1232&\\
+        399&            1266&           &              385&                1218&               &\\
+        640&            &              &              584&                &                  &\\
+        \bottomrule
+    \end{tabular}
+    \caption{}
+    \label{tab:reticolo}
+\end{SCtable}
+
+\subsection{Analisi dati}
+
+
