--- a/O4/Latex/Relazione.tex
+++ b/O4/Latex/Relazione.tex
@@ -2,6 +2,7 @@
 \usepackage[italian]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage{amsmath}
+\usepackage{amsfonts}
 \usepackage{fullpage}
 \usepackage{graphicx}
 \usepackage{booktabs}
